Fix bug image too big

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,8 +48,8 @@
 }
 
 img {
-    width: 150;
-    height: 150;
+    width: 150px;
+    height: 150px;
     filter: invert(49%) sepia(9%) saturate(187%) hue-rotate(159deg) brightness(97%) contrast(97%);
     margin-left: calc(100% / 2 - 75px);
     margin-top: calc((100% * 9/16)/2 - 75px);
